# llm-litellm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  llm_lite.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py
tests/: conftest.py  test_llm_lite.py
